--- a/app/src/main/res/layout/wallet_activity_input_password.xml
+++ b/app/src/main/res/layout/wallet_activity_input_password.xml
@@ -19,6 +19,7 @@
             <EditText
                 android:id="@+id/et_wallet_name"
                 style="@style/WalletCommonEditText"
+                android:gravity="center_vertical"
                 android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_create_name" />
 
@@ -62,12 +63,14 @@
                     android:drawablePadding="5dp"
                     android:text="@string/wallet_password_warning_top"
                     android:textColor="@color/wallet_text_gray_color"
+                    android:typeface="serif"
                     android:textSize="11sp" />
 
                 <TextView
                     android:id="@+id/tv_warning_bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:typeface="serif"
                     android:layout_marginTop="5dp"
                     android:drawableLeft="@drawable/wallet_blue_circle_point"
                     android:drawablePadding="5dp"
