--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
@@ -66,6 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:lineSpacingExtra="4.5dp"
         android:text="@string/wallet_backup_hint_first_2"
         android:textColor="@color/wallet_text_gray_color"
         android:textSize="13sp"
@@ -78,9 +79,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="@string/wallet_offline_manager"
         android:drawableLeft="@drawable/wallet_blue_circle_point"
         android:drawablePadding="5dp"
+        android:text="@string/wallet_offline_manager"
         android:textColor="@color/wallet_black"
         android:textSize="13sp"
         android:textStyle="bold"
@@ -94,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_two_1"
+        android:lineSpacingExtra="4.5dp"
         android:textColor="@color/wallet_text_gray_color"
         android:textSize="13sp"
         app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
@@ -103,6 +105,7 @@
     <TextView
         android:id="@+id/tv_backup_two_2"
         android:layout_width="0dp"
+        android:lineSpacingExtra="4.5dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_two_2"
