--- a/app/src/main/res/layout/wallet_import_wallet_top_view.xml
+++ b/app/src/main/res/layout/wallet_import_wallet_top_view.xml
@@ -36,7 +36,9 @@
         android:paddingLeft="25dp"
         android:paddingTop="15dp"
         android:paddingRight="25dp"
-        android:textColor="@color/wallet_text_gray_color"
+        android:typeface="serif"
+        android:lineSpacingExtra="4.5dp"
+        android:textColor="@color/wallet_text_black"
         android:paddingBottom="15dp"
         tools:text="@string/wallet_import_wallet_from_keystore_tip"
         android:textSize="15sp"
