--- a/app/src/main/res/drawable/wallet_identity_prompt_top_bg.xml
+++ b/app/src/main/res/drawable/wallet_identity_prompt_top_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:topRightRadius="8dp" />
     <solid android:color="@color/wallet_main_yellow_color" />
-    <corners android:radius="4dp" />
 </shape>
