--- a/app/src/main/res/drawable/wallet_rectangle_line_10.xml
+++ b/app/src/main/res/drawable/wallet_rectangle_line_10.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="10dp" />
-    <stroke android:color="@color/wallet_line_gray" android:width="1dp" />
+    <stroke android:color="@color/wallet_line_shape" android:width="1dp" />
 </shape>
