--- a/app/src/main/res/drawable/wallet_st_shape_third_bottom_right_radius.xml
+++ b/app/src/main/res/drawable/wallet_st_shape_third_bottom_right_radius.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/wallet_main_yellow_color" />
-    <corners android:radius="4dp" />
+    <corners android:bottomRightRadius="8dp" />
+    <gradient
+        android:startColor="#2A8FFF"
+        android:endColor="#00B0D3" />
 </shape>
