--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="wallet_line_gray">#EDEDED</color>
+    <color name="wallet_line_shape">#F0F0F0</color>
     <color name="wallet_hint_text">#aaaaaa</color>
     <color name="wallet_line_gray_deep">#eeeeee</color>
     <color name="wallet_blue">#3b9bff</color>
@@ -66,4 +67,5 @@
     <color name="wallet_color_A2A2A2">#A2A2A2</color>
     <color name="wallet_color_f5f5f5">#F5f5f5</color>
     <color name="wallet_color_C2C2C2">#C2C2C2</color>
+    <color name="wallet_color_005FC7">#005FC7</color>
 </resources>
