token assets event

--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -68,4 +68,5 @@
     <color name="wallet_color_f5f5f5">#F5f5f5</color>
     <color name="wallet_color_C2C2C2">#C2C2C2</color>
     <color name="wallet_color_005FC7">#005FC7</color>
+    <color name="wallet_color_31B27A">#31B27A</color>
 </resources>
