--- a/app/src/main/res/layout/fragment_assets.xml
+++ b/app/src/main/res/layout/fragment_assets.xml
@@ -18,6 +18,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_view"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
