--- a/app/src/main/res/layout/wallet_fragment_token.xml
+++ b/app/src/main/res/layout/wallet_fragment_token.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".assets.fragment.TokenFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -10,4 +10,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
