--- a/app/src/main/res/layout/wallet_activity_claims.xml
+++ b/app/src/main/res/layout/wallet_activity_claims.xml
@@ -5,8 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".assets.ClaimsActivity">
+    <include
+        android:id="@+id/title"
+        layout="@layout/wallet_common_title_layout"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <FrameLayout
+        app:layout_constraintTop_toBottomOf="@id/title"
         android:id="@+id/claims"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
