--- a/app/src/main/res/layout/wallet_activity_transaction.xml
+++ b/app/src/main/res/layout/wallet_activity_transaction.xml
@@ -17,25 +17,51 @@
 
     <ImageView
         android:id="@+id/coin_icon"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="10dp"
         android:src="@mipmap/wallet_eth_icon"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintBottom_toBottomOf="@id/balance"
+        app:layout_constraintRight_toLeftOf="@id/token_name"
+        app:layout_constraintTop_toTopOf="@id/balance" />
 
     <TextView
-        android:id="@+id/balance_and_name"
+        android:id="@+id/balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/wallet_black"
-        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="100dp"
+        android:textColor="@color/wallet_main_yellow_color"
+        android:textSize="52sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        tools:text="10" />
+
+    <TextView
+        android:id="@+id/split_line"
+        android:layout_width="32dp"
+        android:layout_height="61dp"
+        android:text="/"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/wallet_color_E8E8E8"
+        android:textSize="58sp"
+        android:includeFontPadding="false"
+        app:layout_constraintBottom_toBottomOf="@id/balance"
+        app:layout_constraintRight_toLeftOf="@id/coin_icon"
+        app:layout_constraintTop_toTopOf="@id/balance" />
+
+    <TextView
+        android:id="@+id/token_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:textColor="@color/wallet_black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/balance"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/coin_icon"
-        tools:text="00 ETH" />
+        app:layout_constraintTop_toTopOf="@id/balance"
+        tools:text="ETH" />
 
     <LinearLayout
         android:id="@+id/receive"
@@ -45,7 +71,7 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/send"
-        app:layout_constraintTop_toBottomOf="@id/balance_and_name">
+        app:layout_constraintTop_toBottomOf="@id/balance">
 
         <ImageView
             android:layout_width="64dp"
