--- a/app/src/main/res/layout/wallet_mnemonic_preview_item.xml
+++ b/app/src/main/res/layout/wallet_mnemonic_preview_item.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mnemonic_layout"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/mnemonic_preview_item"
         android:layout_width="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/wallet_shape_edittext"
-        android:paddingBottom="5dp"
+        android:background="@drawable/memonic_selected"
+        android:gravity="center"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:textColor="@color/wallet_black"
+        android:paddingRight="10dp"
+        android:paddingBottom="5dp"
+        android:textColor="@color/wallet_text_black"
         tools:text="@string/wallet_designated_amount" />
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/memonic_error_icon"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/mnemonic_preview_item"
+        app:layout_constraintRight_toRightOf="@id/mnemonic_preview_item"
+        android:layout_marginLeft="7.5dp"
+        android:layout_marginBottom="7.5dp"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_gravity="right"
+        android:src="@mipmap/memonic_error" />
+</androidx.constraintlayout.widget.ConstraintLayout>
